fix for gh pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Engineering Project Status Hub | Professional Project Communication</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
+    <script src="./static/js/base-url.js"></script>
     <style>
         :root {
             --primary-color: #1B4965;
@@ -213,7 +214,7 @@
                 <div>
                     <a href="#features" style="color: white; text-decoration: none; margin-left: 2rem;">Features</a>
                     <a href="#projects" style="color: white; text-decoration: none; margin-left: 2rem;">Example Projects</a>
-                    <a href="/contact.html" style="color: white; text-decoration: none; margin-left: 2rem;">Contact</a>
+                    <a href="./contact.html" style="color: white; text-decoration: none; margin-left: 2rem;">Contact</a>
                 </div>
             </nav>
         </div>
@@ -225,7 +226,7 @@
             <div class="hero-content">
                 <h1>Project Status Pages for Engineering Firms</h1>
                 <p>I build clean, reliable project status pages that keep your stakeholders informed and your team focused on the work.</p>
-                <a href="/contact.html" class="cta-button">Get Started Today</a>
+                <a href="./contact.html" class="cta-button">Get Started Today</a>
             </div>
         </div>
     </section>
@@ -272,7 +273,7 @@
                     <div class="project-content">
                         <h3>Downtown Public Library</h3>
                         <p>Urban Engineering</p>
-                        <a href="/firms/urban-engineering/public-library/status.html" class="cta-button" style="margin-top: 1rem;">View Status</a>
+                        <a href="./firms/urban-engineering/public-library/status.html" class="cta-button" style="margin-top: 1rem;">View Status</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -282,7 +283,7 @@
                     <div class="project-content">
                         <h3>Beach Restoration Project</h3>
                         <p>Coastal Engineering</p>
-                        <a href="/firms/coastal-engineering/beach-restoration/status.html" class="cta-button" style="margin-top: 1rem;">View Status</a>
+                        <a href="./firms/coastal-engineering/beach-restoration/status.html" class="cta-button" style="margin-top: 1rem;">View Status</a>
                     </div>
                 </div>
             </div>
