--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <title>Contact | Project Status Hub</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
+    <script src="./static/js/base-url.js"></script>
     <style>
         :root {
             --primary-color: #1B4965;
@@ -145,11 +146,11 @@
     <header class="header">
         <div class="container">
             <nav style="display: flex; justify-content: space-between; align-items: center;">
-                <a href="/" style="font-size: 1.5rem; font-weight: 700; color: white; text-decoration: none;">Project Status Hub</a>
+                <a href="./" style="font-size: 1.5rem; font-weight: 700; color: white; text-decoration: none;">Project Status Hub</a>
                 <div>
-                    <a href="/#features" style="color: white; text-decoration: none; margin-left: 2rem;">Features</a>
-                    <a href="/#projects" style="color: white; text-decoration: none; margin-left: 2rem;">Example Projects</a>
-                    <a href="/contact.html" style="color: white; text-decoration: none; margin-left: 2rem;">Contact</a>
+                    <a href="./#features" style="color: white; text-decoration: none; margin-left: 2rem;">Features</a>
+                    <a href="./#projects" style="color: white; text-decoration: none; margin-left: 2rem;">Example Projects</a>
+                    <a href="./contact.html" style="color: white; text-decoration: none; margin-left: 2rem;">Contact</a>
                 </div>
             </nav>
         </div>
