fix css for gh pages

--- a/firms/coastal-engineering/projects.html
+++ b/firms/coastal-engineering/projects.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Coastal Engineering</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <script src="../../static/js/base-url.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -12,9 +13,9 @@
         <div class="container">
             <div class="logo">Coastal Engineering</div>
             <nav>
-                <a href="/firms/not-configured.html">Visit Coastal Engineering Website</a>
-                <a href="/firms/coastal-engineering/projects.html" class="active">View All Projects</a>
-                <a href="/">Project Hub Home</a>
+                <a href="../../firms/not-configured.html">Visit Coastal Engineering Website</a>
+                <a href="./projects.html" class="active">View All Projects</a>
+                <a href="../../">Project Hub Home</a>
             </nav>
         </div>
     </header>
