--- a/firms/urban-engineering/public-library/status.html
+++ b/firms/urban-engineering/public-library/status.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Downtown Public Library: Project Progress | Urban Engineering</title>
-    <link rel="stylesheet" href="/static/css/urban-style.css">
+    <link rel="stylesheet" href="../../../static/css/urban-style.css">
+    <script src="../../../static/js/base-url.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -12,9 +13,9 @@
         <div class="container">
             <div class="logo">Urban Engineering</div>
             <nav>
-                <a href="/firms/not-configured.html">Visit Urban Engineering Website</a>
-                <a href="/firms/urban-engineering/projects.html">View All Projects</a>
-                <a href="/">Project Hub Home</a>
+                <a href="../../../firms/not-configured.html">Visit Urban Engineering Website</a>
+                <a href="../../urban-engineering/projects.html">View All Projects</a>
+                <a href="../../../">Project Hub Home</a>
             </nav>
         </div>
     </header>
