--- a/firms/not-configured.html
+++ b/firms/not-configured.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Not Configured</title>
+    <script src="../static/js/base-url.js"></script>
     <style>
         body {
             font-family: system-ui, -apple-system, sans-serif;
@@ -46,7 +47,7 @@
     <div class="container">
         <h1>Website Not Configured</h1>
         <p>The firm's website has not been configured in the project status system yet. Please check back later or contact the system administrator.</p>
-        <a href="/" class="back-link">Return to Homepage</a>
+        <a href="../" class="back-link">Return to Homepage</a>
     </div>
 </body>
 </html>
