clean up contact info and footer

--- a/contact.html
+++ b/contact.html
@@ -165,13 +165,9 @@
                 <div class="contact-grid">
                     <div class="contact-info">
                         <h2 style="color: var(--primary-color); margin-bottom: 1.5rem;">Get in Touch</h2>
-                        <div style="margin-bottom: 1.5rem;">
-                            <i class="fas fa-phone" style="color: var(--secondary-color); margin-right: 0.5rem;"></i>
-                            <span>(555) 123-4567</span>
-                        </div>
                         <div>
                             <i class="fas fa-envelope" style="color: var(--secondary-color); margin-right: 0.5rem;"></i>
-                            <span>info@projectstatushub.com</span>
+                            <span><a href="mailto:nic@mydigitalharbor.com" style="color: inherit; text-decoration: none; border-bottom: 1px dotted var(--secondary-color);">nic@mydigitalharbor.com</a></span>
                         </div>
                     </div>
                     <div class="benefits">
@@ -213,10 +209,10 @@
         </div>
     </div>
 
-    <footer class="section-dark" style="padding: 2rem 0;">
+    <footer class="section-dark" style="padding: 2rem 0; background-color: #1e4d6b;">
         <div class="container">
             <div style="text-align: center;">
-                <p style="margin: 0;">Contact me at (555) 123-4567 or info@projectstatushub.com</p>
+                <p style="margin: 0; color: #ffffff; font-size: 1.1rem; letter-spacing: 0.02em;">Contact me at <a href="mailto:nic@mydigitalharbor.com" style="color: #ffffff; text-decoration: none; border-bottom: 1px dotted #ffffff; padding-bottom: 2px;">nic@mydigitalharbor.com</a></p>
             </div>
         </div>
     </footer>
