--- a/firms/urban-engineering/public-library/status.html
+++ b/firms/urban-engineering/public-library/status.html
@@ -149,9 +149,9 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer style="background-color: #1e4d6b; padding: 2rem 0;">
         <div class="container">
-            <p>© 2025 Urban Engineering. For more information about this project, contact our office at (555) 123-4567.</p>
+            <p style="margin: 0; color: #ffffff; font-size: 1.1rem; letter-spacing: 0.02em; text-align: center;">© 2025 Urban Engineering. For more information about this project, contact us at <a href="mailto:nic@mydigitalharbor.com" style="color: #ffffff; text-decoration: none; border-bottom: 1px dotted #ffffff; padding-bottom: 2px;">nic@mydigitalharbor.com</a>.</p>
         </div>
     </footer>
 
