--- a/index.html
+++ b/index.html
@@ -347,15 +347,9 @@
                     <h3 style="font-size: 1.5rem; color: var(--primary-color); margin-bottom: 2rem;">Let's Talk</h3>
                     <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 2rem;">
                         <div>
-                            <i class="fas fa-phone fa-2x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
-                            <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Phone</h4>
-                            <p>(555) 123-4567</p>
-                        </div>
-                        <div>
-                            <i class="fas fa-envelope fa-2x"
-                                style="color: var(--primary-color); margin-bottom: 1rem;"></i>
-                            <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Email</h4>
-                            <p>info@projectstatushub.com</p>
+                            <i class="fas fa-envelope fa-2x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
+                            <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Contact</h4>
+                            <p><a href="mailto:nic@mydigitalharbor.com" style="color: inherit; text-decoration: none; border-bottom: 1px dotted var(--primary-color);">nic@mydigitalharbor.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -364,10 +358,10 @@
     </section>
 
     <!-- Footer -->
-    <footer class="section-dark" style="padding: 2rem 0;">
+    <footer class="section-dark" style="padding: 2rem 0; background-color: #1e4d6b;">
         <div class="container">
             <div style="text-align: center;">
-                <p style="margin: 0;">Contact me at (555) 123-4567 or info@projectstatushub.com</p>
+                <p style="margin: 0; color: #ffffff; font-size: 1.1rem; letter-spacing: 0.02em;">Contact me at <a href="mailto:nic@mydigitalharbor.com" style="color: #ffffff; text-decoration: none; border-bottom: 1px dotted #ffffff; padding-bottom: 2px;">nic@mydigitalharbor.com</a></p>
             </div>
         </div>
     </footer>
