--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="./static/css/style.css">
     <!-- HTML Meta Tags -->
     <title>Engineering Project Status Hub | Professional Project Communication</title>
-    <meta name="description" content="">
+    <meta name="description" content="Professional engineering project status pages with dedicated developer support. Quick 24-hour updates and custom solutions for your project communication needs.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://digitalharbor7.github.io/engineering-status-pages/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Engineering Project Status Hub | Professional Project Communication">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="Professional engineering project status pages with dedicated developer support. Quick 24-hour updates and custom solutions for your project communication needs.">
     <!--
   You can generate this image URL dynamically: https://ogcdn.net/2c2c6737-47d4-4459-9969-e711eb48394c/v1/{site_text}/{title_text}/{description_text}/{image_url}/og.png
   Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
@@ -30,7 +30,7 @@
     <meta property="twitter:domain" content="digitalharbor7.github.io">
     <meta property="twitter:url" content="https://digitalharbor7.github.io/engineering-status-pages/">
     <meta name="twitter:title" content="Engineering Project Status Hub | Professional Project Communication">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:description" content="Professional engineering project status pages with dedicated developer support. Quick 24-hour updates and custom solutions for your project communication needs.">
     <!--
   You can generate this image URL dynamically: https://ogcdn.net/2c2c6737-47d4-4459-9969-e711eb48394c/v1/{site_text}/{title_text}/{description_text}/{image_url}/og.png
   Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
@@ -262,9 +262,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Project Status Pages for Engineering Firms</h1>
-                <p>I build clean, reliable project status pages that keep your stakeholders informed and your team
-                    focused on the work.</p>
+                <h1>Project Status Pages</h1>
+                <p>Professional status pages that keep your community in the loop. Simple, transparent communication about the projects that matter.</p>
                 <a href="./contact.html" class="cta-button">Get Started Today</a>
             </div>
         </div>
@@ -274,25 +273,25 @@
     <section id="features" class="section section-light">
         <div class="container">
             <div class="section-title">
-                <h2>Simple Project Communication</h2>
-                <p>Clear, reliable project status pages for engineering firms</p>
+                <h2>Personal Developer Service</h2>
+                <p>Dedicated support for your project communication needs</p>
             </div>
             <div class="features-grid">
                 <div class="feature-card">
-                    <i class="fas fa-clipboard-list fa-3x"
+                    <i class="fas fa-clock fa-3x"
                         style="color: var(--primary-color); margin-bottom: 1rem;"></i>
-                    <h3>Progress Tracking</h3>
-                    <p>Clear milestones and updates that matter to your stakeholders</p>
+                    <h3>Quick Response Time</h3>
+                    <p>Updates posted within 24 hours or 1 business day</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-users fa-3x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
-                    <h3>Stakeholder Updates</h3>
-                    <p>Keep everyone on the same page with regular updates</p>
+                    <i class="fas fa-code fa-3x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
+                    <h3>Custom Solutions</h3>
+                    <p>Flexible static site solutions tailored to your project needs</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-file-alt fa-3x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
-                    <h3>Documentation</h3>
-                    <p>One reliable source for project status information</p>
+                    <i class="fas fa-user-tie fa-3x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
+                    <h3>Direct Communication</h3>
+                    <p>Work directly with a dedicated developer for your updates</p>
                 </div>
             </div>
         </div>
@@ -302,8 +301,8 @@
     <section id="projects" class="section section-dark">
         <div class="container">
             <div class="section-title">
-                <h2>Example Projects</h2>
-                <p>See how I help engineering firms communicate project status</p>
+                <h2>See It In Action</h2>
+                <p>Real projects using our status pages</p>
             </div>
             <div class="project-grid">
                 <div class="project-card">
@@ -312,8 +311,8 @@
                             alt="Downtown Public Library">
                     </div>
                     <div class="project-content">
-                        <h3>Downtown Public Library</h3>
-                        <p>Urban Engineering</p>
+                        <h3>Downtown Library</h3>
+                        <p>Keeping library patrons updated during 18-month renovation</p>
                         <a href="./firms/urban-engineering/public-library/status.html" class="cta-button"
                             style="margin-top: 1rem;">View Status</a>
                     </div>
@@ -324,8 +323,8 @@
                             alt="Beach Restoration Project">
                     </div>
                     <div class="project-content">
-                        <h3>Beach Restoration Project</h3>
-                        <p>Coastal Engineering</p>
+                        <h3>Beach Project</h3>
+                        <p>Weekly updates on shoreline improvements and access changes</p>
                         <a href="./firms/coastal-engineering/beach-restoration/status.html" class="cta-button"
                             style="margin-top: 1rem;">View Status</a>
                     </div>
@@ -338,20 +337,12 @@
     <section id="contact" class="section section-light">
         <div class="container">
             <div class="section-title">
-                <h2>Get in Touch</h2>
-                <p>Need a reliable project status page? Let's talk about your needs.</p>
+                <h2>Ready to Start?</h2>
+                <p>Let's set up your project status page</p>
             </div>
             <div class="contact-info" style="max-width: 600px; margin: 0 auto; text-align: center;">
-                <div
-                    style="background: white; padding: 3rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                    <h3 style="font-size: 1.5rem; color: var(--primary-color); margin-bottom: 2rem;">Let's Talk</h3>
-                    <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 2rem;">
-                        <div>
-                            <i class="fas fa-envelope fa-2x" style="color: var(--primary-color); margin-bottom: 1rem;"></i>
-                            <h4 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Contact</h4>
-                            <p><a href="mailto:nic@mydigitalharbor.com" style="color: inherit; text-decoration: none; border-bottom: 1px dotted var(--primary-color);">nic@mydigitalharbor.com</a></p>
-                        </div>
-                    </div>
+                <div style="background: white; padding: 3rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                    <a href="mailto:nic@mydigitalharbor.com" class="cta-button" style="font-size: 1.2rem;">Get in Touch</a>
                 </div>
             </div>
         </div>
