--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="container">
             <div class="section-title">
                 <h2>See It In Action</h2>
-                <p>Real projects using our status pages</p>
+                <p>Example projects and status pages</p>
             </div>
             <div class="project-grid">
                 <div class="project-card">
